src/objects/Booking_Cancel__c.object
<CustomObject>
    <fields>
        <fullName>Booking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booking</label>
        <referenceTo>Booking__c</referenceTo>
        <relationshipName>Booking_Cancels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Broker_Name__c</fullName>
        <label>Channel Partner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Partner</label>
        <referenceTo>Broker__c</referenceTo>
        <relationshipLabel>Booking Cancellation</relationshipLabel>
        <relationshipName>Booking_Cancels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cancellation_Type__c</fullName>
        <label>Cancellation Type</label>
        <picklist>
            <picklistValues>
                <fullName>CHANGE OF LAYOUT PLAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COURT CASE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NON-PAYMENT OF DUES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REFUND DEMANDED BY CUSTOMER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRANSFER TO OTHER UNIT/PROJECT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UNCLEAR LAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UNIT ABANDONED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CancelledOn__c</fullName>
        <label>CancelledOn</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsApproved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Transaction_Date__c</fullName>
        <label>Last Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NewUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Booking_Cancels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2 AND 3</booleanFilter>
            <filterItems>
                <field>Opportunity.Project_Unit__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Opportunity.Project_Unit__r.Unit_Status__c</field>
                <operation>equals</operation>
                <value>Sold</value>
            </filterItems>
            <filterItems>
                <field>Opportunity.Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Booking Cancellation</relationshipLabel>
        <relationshipName>Booking_Cancels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Unit</label>
        <referenceTo>Project_Unit__c</referenceTo>
        <relationshipName>Booking_Cancels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipName>Booking_Cancels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remark__c</fullName>
        <label>Remark</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Processed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UnProcessed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Credit_Amount__c</fullName>
        <label>Total Credit Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Booking Cancellation</label>
    <nameField>
        <displayFormat>BC-{00000}</displayFormat>
        <label>Booking Cancel Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booking Cancellation</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>ValidateCancelledOn</fullName>
        <active>true</active>
        <errorConditionFormula>(CancelledOn__c  &lt;  Booking__r.Effective_From__c ) || ( CancelledOn__c  &gt;  Today())</errorConditionFormula>
        <errorDisplayField>CancelledOn__c</errorDisplayField>
        <errorMessage>Date must be greater than Booking Date and not greater than Today Date</errorMessage>
    </validationRules>
</CustomObject>